automatically backed up by learn

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,4 +7,10 @@
   Product<% text_field_tag name=
 
 
+<%= form_tag ({controller: 'products',
+    action: 'add',
+    method: 'post'}) do %>
 
+  <input name=product>
+  <input type=submit value='add to cart'>
+<% end %>
