automatically backed up by learn

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,8 +3,8 @@
 <li><%= item %></li>
 <%end%>
 
-<!--<% form_for @cart do |t|%>
-  Product<% text_field_tag name=-->
+<!--<#% form_for @cart do |t|%>
+  Product<#% text_field_tag name=-->
 
 
 <%= form_tag ({controller: 'products',
