--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Cart</h1>
-<% cart.each do |item| %>
-<li><%= item %></li>
+<% cart.each do |product| %>
+<li><%= product%></li>
 <%end%>
 
 <!--<#% form_for @cart do |t|%>
